feat: new custom classes for sidebar and font import

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,3 +1,14 @@
+@import url("/fonts/stylesheet.css");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .brand {
+    @apply text-5xl font-bold text-secondary;
+  }
+  .sidebar-link {
+    @apply font-primary tracking-widest;
+  }
+}
